--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon  --env-file=.env index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongoose": "^8.4.4"
   },
   "devDependencies": {
     "node": "^20.15.0",
     "nodemon": "^3.1.4"
-  }
+  },
+  "description": ""
 }
