--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon  --env-file=.env index.js"
+    "dev": "nodemon  --env-file=.env index.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
-    "mongoose": "^8.4.4"
+    "mongoose": "^8.4.4",
+    "normalize-mongoose": "^1.0.0"
   },
   "devDependencies": {
     "node": "^20.15.0",
